--- a/deploy/kubernetes/manifests/orders-dep.yaml
+++ b/deploy/kubernetes/manifests/orders-dep.yaml
@@ -10,18 +10,17 @@ spec:
     metadata:
       labels:
         name: orders
-    spec:
+    spec: 
       containers:
       - name: orders
-        image: phx.ocir.io/intvravipati/mushop/orders:1.0.0
+        image: phx.ocir.io/intvravipati/mushop/orders:1.0.1
         env:
          - name: ZIPKIN
            value: zipkin.jaeger.svc.cluster.local
          - name: JAVA_OPTS
-           value: -Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
+           value: -Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE  -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
          - name: JDBC_URL
            value: "jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config"
-         
          - name: OADB_USER
            valueFrom:
              secretKeyRef:
@@ -36,7 +35,17 @@ spec:
            valueFrom:
              secretKeyRef:
                name: atp-secret
-               key: orders_oadb_service   
+               key: orders_oadb_service
+         - name: ATP_TRUST_PASS
+           valueFrom:
+            secretKeyRef:
+               name: atp-secret
+               key: orders_trust_pass 
+         - name: ATP_KEY_PASS
+           valueFrom:
+            secretKeyRef:
+               name: atp-secret
+               key: orders_key_pass   
         ports:
         - containerPort: 80
         volumeMounts:
