--- a/deploy/helm-chart/mushop/templates/issuer.yaml
+++ b/deploy/helm-chart/mushop/templates/issuer.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.devInstall false }}
+{{- if .Values.ingressDns.enabled }}
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: ClusterIssuer
 metadata:
@@ -8,7 +8,7 @@ spec:
     # The ACME production api URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: "jeevan.g@gmail.com"
+    email: {{ .Values.ingressDns.email }}
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-prod
@@ -24,7 +24,7 @@ spec:
     # The ACME production api URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: "jeevan.g@gmail.com"
+    email: {{ .Values.ingressDns.email }}
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-staging
