Refactor ingress, so it can be used for dev, test and prod. Also adding values file for Prod and Test. The default installation is Dev.

--- a/deploy/helm-chart/mushop/charts/api/values.yaml
+++ b/deploy/helm-chart/mushop/charts/api/values.yaml
@@ -34,7 +34,9 @@ hpa:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 70
+      target:
+        type: Utilization
+        averageUtilization: 70
 
 service:
   port: 80
