--- a/deploy/helm-chart/mushop/charts/edge/values.yaml
+++ b/deploy/helm-chart/mushop/charts/edge/values.yaml
@@ -13,6 +13,18 @@ resources:
     cpu: 50m
     memory: 256Mi
 
+hpa:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 10
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 70
+
 securityContext:
   runAsNonRoot: true
   runAsUser: 10001
