--- a/deploy/helm-chart/mushop/charts/carts/templates/secret.yaml
+++ b/deploy/helm-chart/mushop/charts/carts/templates/secret.yaml
@@ -9,3 +9,5 @@ data:
   oadb_pw: {{ required "Value .secrets.oadbPassword is required!" .Values.secrets.oadbPassword | b64enc }}
   oadb_service: {{ .Values.secrets.oadbService | b64enc }}
   oadb_user: {{ .Values.secrets.oadbUser | b64enc }}
+  trust_pass: {{ required "Value .secrets.trustPass is required!" .Values.secrets.trustPass | b64enc }}
+  key_pass: {{ required "Value .secrets.keyPass is required!" .Values.secrets.keyPass | b64enc }}
