--- a/deploy/helm-chart/mushop/charts/carts/values.yaml
+++ b/deploy/helm-chart/mushop/charts/carts/values.yaml
@@ -9,10 +9,12 @@ secrets:
   oadbService: mcarts_tp
   oadbUser: carts_user
   oadbPassword:
+  trustPass:
+  keyPass:
 
 env:
   zipkin: zipkin.jaeger.svc.cluster.local
-  javaOpts: -Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.mushop.carts=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
+  javaOpts: -Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.mushop.carts=TRACE  -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
   jdbcUrl: "jdbc:oracle:thin:@db3_tp?TNS_ADMIN=./config"
 
 service:
