--- a/deploy/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
@@ -45,6 +45,16 @@ spec:
                 secretKeyRef:
                   name: {{ include "orders.fullname" . }}
                   key: oadb_service
+            - name: ATP_TRUST_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "orders.fullname" . }}
+                  key: trust_pass
+            - name: ATP_KEY_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "orders.fullname" . }}
+                  key: key_pass
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
