--- a/deploy/helm-chart/mushop/templates/streams-secret.yaml
+++ b/deploy/helm-chart/mushop/templates/streams-secret.yaml
@@ -11,4 +11,6 @@ data:
   oci_user_id: {{ required "Value .secrets.oci.userId is required!" .Values.secrets.oci.userId | b64enc }}
   oci_fingerprint: {{ required "Value .secrets.oci.fingerprint is required!" .Values.secrets.oci.fingerprint | b64enc }}
   oci_region: {{ required "Value .secrets.oci.region is required!" .Values.secrets.oci.region | b64enc }}
-  oci_api_key: {{ required "Value .secrets.oci.apiKey is required!" .Values.secrets.oci.apiKey | b64enc }}
+  oci_pass_phrase: {{ required "Value .secrets.oci.passphrase is required!" .Values.secrets.oci.passphrase | b64enc }}
+  oci_api_key: |-
+    {{ (.Files.Get "secrets/oci_api_key.pem") | b64enc }}
