--- a/deploy/helm-chart/mushop/charts/orders/templates/secret.yaml
+++ b/deploy/helm-chart/mushop/charts/orders/templates/secret.yaml
@@ -11,3 +11,11 @@ data:
   oadb_user: {{ .Values.secrets.oadbUser | b64enc }}
   trust_pass: {{ required "Value .secrets.trustPass is required!" .Values.secrets.trustPass | b64enc }}
   key_pass: {{ required "Value .secrets.keyPass is required!" .Values.secrets.keyPass | b64enc }}
+  oci_api_key: |-
+    {{ (.Files.Get "secrets/oci_api_key.pem") | b64enc }}
+  keystore.jks: |-
+    {{ (.Files.Get "secrets/keystore.jks") | b64enc }}
+  tnsnames.ora: |-
+    {{ (.Files.Get "secrets/tnsnames.ora") | b64enc }}
+  truststore.jks: |-
+    {{ (.Files.Get "secrets/truststore.jks") | b64enc }}
