--- a/deploy/helm-chart/mushop/requirements.yaml
+++ b/deploy/helm-chart/mushop/requirements.yaml
@@ -43,3 +43,9 @@ dependencies:
     version: 0.8.0
     condition: certManager.enabled
     repository: https://charts.jetstack.io
+  - name: catalog
+    version: 0.2.1
+    condition: catalog.enabled
+    repository: https://svc-catalog-charts.storage.googleapis.com 
+
+    ## TODO (peterj, 07/15/2019): OCI service broken should be here once they have a repo where the chart can be downloaded from
