--- a/deploy/helm-chart/mushop/charts/api/templates/api-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/api/templates/api-deployment.yaml
@@ -10,11 +10,13 @@ spec:
     matchLabels:
       app.kubernetes.io/name: {{ include "api.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
+      layer: client
   template:
     metadata:
       labels:
         app.kubernetes.io/name: {{ include "api.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        layer: client
     spec:
       containers:
         - name: {{ .Chart.Name }}
@@ -25,7 +27,7 @@ spec:
               containerPort: 3000
           env:
           - name: SESSION_REDIS
-            value: {{ .Values.env.sessionRedis }}
+            value: {{ .Release.name }}-session
           livenessProbe:
             httpGet:
               path: /health
