--- a/deploy/helm-chart/mushop/charts/storefront/templates/storefront-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/storefront/templates/storefront-deployment.yaml
@@ -10,11 +10,13 @@ spec:
     matchLabels:
       app.kubernetes.io/name: {{ include "storefront.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
+      layer: client
   template:
     metadata:
       labels:
         app.kubernetes.io/name: {{ include "storefront.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        layer: client
     spec:
       containers:
         - name: {{ .Chart.Name }}
