Read service URLs from environment variables

--- a/deploy/kubernetes/manifests/api-dep.yaml
+++ b/deploy/kubernetes/manifests/api-dep.yaml
@@ -24,6 +24,14 @@ spec:
         env:
         - name: SESSION_REDIS
           value: session
+        - name: CATALOGUE_URL
+          value: http://catalogue
+        - name: ORDERS_URL
+          value: http://orders
+        - name: CARTS_URL
+          value: http://carts
+        - name: USERS_URL
+          value: http://user
         resources:
           limits:
             cpu: 300m
