--- a/src/storefront/test/docker-compose.yml
+++ b/src/storefront/test/docker-compose.yml
@@ -12,7 +12,11 @@ services:
     environment:
       - reschedule:on-node-failure
       - PORT=3000
-  
+      - CATALOGUE_URL=http://catalogue
+      - CARTS_URL=http://carts
+      - ORDERS_URL=http://orders
+      - USERS_URL=http://user
+
   # OCI Catalog service
   catalogue:
     image: phx.ocir.io/intvravipati/mushop/catalogue:0.0.1
