--- a/deploy/helm-chart/mushop/charts/edge/templates/edge-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/edge/templates/edge-deployment.yaml
@@ -10,6 +10,7 @@ spec:
     matchLabels:
       app.kubernetes.io/name: {{ include "edge-router.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
+      layer: client
   template:
     metadata:
       labels:
