Update all Go dockerfiles to use GO111MODULE=on

--- a/src/payment/Dockerfile
+++ b/src/payment/Dockerfile
@@ -3,7 +3,8 @@ RUN apk add --no-cache ca-certificates git
 WORKDIR /src
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -a \
+RUN GO111MODULE=on GOARCH=amd64 CGO_ENABLED=0 GOOS=linux \
+    go build -a \
     -installsuffix cgo \
     -o /payment cmd/main.go
 
