--- a/src/user/Dockerfile
+++ b/src/user/Dockerfile
@@ -1,15 +1,14 @@
-FROM golang:1.12-alpine
-
+FROM golang:1.12-alpine AS go-builder
 RUN apk add --no-cache ca-certificates git
 WORKDIR /src
-
 COPY . .
-RUN CGO_ENABLED=0 go build -a \
+
+RUN GO111MODULE=on GOARCH=amd64 CGO_ENABLED=0 GOOS=linux \
+	go build -a \
 	-installsuffix cgo \
 	-o /user main.go
 
 FROM alpine:3.4
-
 ENV	SERVICE_USER=myuser \
 	SERVICE_UID=10001 \
 	SERVICE_GROUP=mygroup \
@@ -25,7 +24,7 @@ ENV MONGO_HOST user-db
 
 WORKDIR /
 EXPOSE 80
-COPY --from=0 /user /
+COPY --from=go-builder /user /
 
 RUN	chmod +x /user && \
 	chown -R ${SERVICE_USER}:${SERVICE_GROUP} /user && \
