--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,8 +4,7 @@
   "description": "API layer for microservices demo application",
   "main": "server.js",
   "scripts": {
-    "test": "istanbul cover node_modules/.bin/_mocha -- test/*_test.js test/api/*_test.js",
-    "coverage": "istanbul cover --report cobertura node_modules/.bin/_mocha -- test/*_test.js test/api/*_test.js && mocha test/*_test.js test/api/*_test.js --reporter mocha-junit-reporter --reporter-options mochaFile=./results/test-results.xml",
+    "test": "jest",
     "start": "node server.js"
   },
   "dependencies": {
@@ -18,11 +17,12 @@
     "express-session": "^1.16.2",
     "morgan": "^1.9.1",
     "prom-client": "^11.5.3",
-    "request": "^2.72.0",
+    "request": "^2.88.0",
     "ulid": "^2.3.0"
   },
   "devDependencies": {
     "jest": "^24.8.0",
-    "nock": "^10.0.6"
+    "nock": "^10.0.6",
+    "supertest": "^4.0.2"
   }
 }
