begin migrate to axios

--- a/src/api/package.json
+++ b/src/api/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "async": "^3.1.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.4.2",
     "cookie-parser": "^1.4.4",
