--- a/src/catalogue/docker/docker-compose.yml
+++ b/src/catalogue/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     catalogue:
         build:
             context: .
-            dockerfile: ./docker/catalogue/Dockerfile
+            dockerfile: ./Dockerfile
         image: mushop/catalogue
         hostname: catalogue
         restart: always
@@ -13,6 +13,8 @@ services:
         cap_add:
             - NET_BIND_SERVICE
         read_only: true
+        volumes:
+            - Wallet_Creds:/usr/lib/oracle/19.3/client64/lib/network/admin/
         environment:
             - reschedule=on-node-failure
             - OADB_USER=catalogue_user
