Updating and unifying docker files for Java components
Still need to add the commands to run the unit tests for the components.

--- a/src/queue/Dockerfile
+++ b/src/queue/Dockerfile
@@ -4,28 +4,18 @@ ARG VERSION="0.0.1-SNAPSHOT"
 # ------------
 # Stage 1 : Setting up the build environment
 # 
-FROM openjdk:8-jdk-alpine as buildenv
+FROM phx.ocir.io/intvravipati/jeevan/mvn-jdbc:latest as buildenv
 # ----
-# Install some basic tools
-RUN apk add --no-cache curl tar bash
-
-# Install Maven
-ARG USER_HOME_DIR="/root"
-ARG MAVEN_VERSION=3.6.0
-RUN mkdir -p /usr/share/maven && \
-curl -fsSL http://apache.osuosl.org/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz | tar -xzC /usr/share/maven --strip-components=1 && \
-ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
-ENV MAVEN_HOME /usr/share/maven
-ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 
 # Setup OCI libraries
 ARG GROUP_ID="com.oracle.oci"
 ARG ARTIFACT_ID="oci-java-sdk"
-ARG ARTIFACT_VERSION="1.5.0"
+ARG ARTIFACT_VERSION="1.5.16"
 
 ## Install dependencies to the local repo and cleanup
-COPY ./libs/oci-java-sdk-full-shaded-1.5.0.jar /root/oci-java-sdk-full-shaded-1.5.0.jar
-RUN mvn install:install-file -Dfile=/root/oci-java-sdk-full-shaded-1.5.0.jar -DgroupId=${GROUP_ID} -DartifactId=${ARTIFACT_ID} -Dversion=${ARTIFACT_VERSION} -Dpackaging=jar &&  rm /root/*.jar
+ADD https://github.com/oracle/oci-java-sdk/releases/download/v${ARTIFACT_VERSION}/${ARTIFACT_ID}.zip /root/
+RUN cd /root && unzip -j ${ARTIFACT_ID}.zip shaded/lib/${ARTIFACT_ID}-full-shaded-${ARTIFACT_VERSION}.jar
+RUN mvn install:install-file -Dfile=/root/${ARTIFACT_ID}-full-shaded-${ARTIFACT_VERSION}.jar -DgroupId=${GROUP_ID} -DartifactId=${ARTIFACT_ID} -Dversion=${ARTIFACT_VERSION} -Dpackaging=jar &&  rm /root/*.jar
 
 #
 # create source folder
@@ -36,17 +26,15 @@ WORKDIR /usr/src/app
 #
 # Get Gradle.
 #
-COPY ./settings.gradle /usr/src/app
-COPY ./gradle /usr/src/app/gradle
-COPY ./gradlew /usr/src/app
+COPY settings.gradle /usr/src/app
+COPY gradle /usr/src/app/gradle
+COPY gradlew /usr/src/app
 RUN ./gradlew --refresh-dependencies
 #
 # copy buildscript and cache all dependencies
-#
-COPY ./build.gradle /usr/src/app
+# 
+COPY build.gradle /usr/src/app
 RUN ./gradlew --refresh-dependencies
-#
-# ------------
 
 # ------------
 # Stage 2 : Build the application
@@ -77,11 +65,6 @@ RUN ls -ltr /usr/src/app/build/libs
 FROM openjdk:8-jdk-alpine as application
 ARG APPLICATION_NAME
 ARG VERSION
-
-#
-# bake this in to a build container layer ?
-#
-#COPY ./config /app/config
 
 #
 # copy the generated application distribution
