--- a/src/queue/build.gradle
+++ b/src/queue/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'oracle.ateam.sockshop.queue-master'
+group = 'mushop.queue-master'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -31,7 +31,7 @@ dependencies {
     compile 'io.prometheus:simpleclient_spring_boot:0.0.21'
     compile 'io.prometheus:simpleclient_hotspot:0.0.21'
     compile 'io.prometheus:simpleclient_servlet:0.0.21'
-    compile 'com.oracle.oci:oci-java-sdk:1.5.0'
+    compile 'com.oracle.oci:oci-java-sdk:1.5.16'
     compile 'org.apache.commons:commons-lang3:3.8.1'
     compile 'org.bouncycastle:bcpkix-jdk15on:1.60'
     compile 'org.json:json:20180130'
