--- a/src/shipping/build.gradle
+++ b/src/shipping/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'oracle.ateam.sockshop.shipping'
+group = 'mushop.shipping'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -31,7 +31,7 @@ dependencies {
 	implementation 'io.prometheus:simpleclient_spring_boot:0.0.21'
 	implementation 'io.prometheus:simpleclient_hotspot:0.0.21'
 	implementation 'io.prometheus:simpleclient_servlet:0.0.21'
-	implementation 'com.oracle.oci:oci-java-sdk:1.5.9'
+	implementation 'com.oracle.oci:oci-java-sdk:1.5.16'
 	implementation 'org.apache.commons:commons-lang3:3.8.1'
 	implementation 'org.bouncycastle:bcpkix-jdk15on:1.60'
 	implementation 'org.json:json:20180130'
