Updating carts and orders charts
- fixing the DB name in the JDBC_URL (check if this env variable is needed/used)
- including full wallet (all files) in the both deployments

--- a/deploy/helm-chart/mushop/charts/carts/templates/carts-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/carts/templates/carts-deployment.yaml
@@ -58,9 +58,15 @@ spec:
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
+            - mountPath: /config
+              name: wallet
+              readOnly: true
       volumes:
           - name: tmp-volume
             emptyDir:
               medium: Memory
+          - name: wallet
+            secret:
+              secretName: {{ include "carts.fullname" . }}
       nodeSelector:
           beta.kubernetes.io/os: linux
