--- a/deploy/helm-chart/mushop/charts/carts/templates/secret.yaml
+++ b/deploy/helm-chart/mushop/charts/carts/templates/secret.yaml
@@ -11,8 +11,16 @@ data:
   oadb_user: {{ .Values.secrets.oadbUser | b64enc }}
   trust_pass: {{ required "Value .secrets.trustPass is required!" .Values.secrets.trustPass | b64enc }}
   key_pass: {{ required "Value .secrets.keyPass is required!" .Values.secrets.keyPass | b64enc }}
+  cwallet.sso: |-
+    {{ (.Files.Get "secrets/cwallet.sso") | b64enc }}
+  ewallet.p12: |-
+    {{ (.Files.Get "secrets/ewallet.p12") | b64enc }}
   keystore.jks: |-
     {{ (.Files.Get "secrets/keystore.jks") | b64enc }}
+  ojdbc.properties: |-
+    {{ (.Files.Get "secrets/ojdbc.properties") | b64enc }}
+  sqlnet.ora: |-
+    {{ (.Files.Get "secrets/sqlnet.ora") | b64enc }}
   tnsnames.ora: |-
     {{ (.Files.Get "secrets/tnsnames.ora") | b64enc }}
   truststore.jks: |-
