--- a/deploy/helm-chart/mushop/charts/orders/templates/secret.yaml
+++ b/deploy/helm-chart/mushop/charts/orders/templates/secret.yaml
@@ -13,8 +13,16 @@ data:
   key_pass: {{ required "Value .secrets.keyPass is required!" .Values.secrets.keyPass | b64enc }}
   oci_api_key: |-
     {{ (.Files.Get "secrets/oci_api_key.pem") | b64enc }}
+  cwallet.sso: |-
+    {{ (.Files.Get "secrets/cwallet.sso") | b64enc }}
+  ewallet.p12: |-
+    {{ (.Files.Get "secrets/ewallet.p12") | b64enc }}
   keystore.jks: |-
     {{ (.Files.Get "secrets/keystore.jks") | b64enc }}
+  ojdbc.properties: |-
+    {{ (.Files.Get "secrets/ojdbc.properties") | b64enc }}
+  sqlnet.ora: |-
+    {{ (.Files.Get "secrets/sqlnet.ora") | b64enc }}
   tnsnames.ora: |-
     {{ (.Files.Get "secrets/tnsnames.ora") | b64enc }}
   truststore.jks: |-
