Updating ingress and issuer to support Helm install with LetsEncrypt
- removing the cert-manager as a requirement as it can't be deployed together with the chart - it needs to be in a separate namespace and the validation needs to be turned off in that namespace (chicken-and-egg problem with the webhook that validates things and the fact cert-manager creates internal certs that need to be validated)

- updating Readme to include instructions on installing cert-manager
- renaming and updating values files + adding more comments
- fixing the ports in the Traefik config as those changed and the services now run on port 80 (much better!)

--- a/deploy/helm-chart/mushop/charts/edge/config/traefik.toml
+++ b/deploy/helm-chart/mushop/charts/edge/config/traefik.toml
@@ -17,13 +17,13 @@ entryPoint = "http"
       [backends.api.loadbalancer]
         method = "wrr"
       [backends.api.servers.server1]
-        url = "http://{{ .Release.Name }}-api:3000"
+        url = "http://{{ .Release.Name }}-api"
     # web
     [backends.web1]
       [backends.web1.loadbalancer]
         method = "wrr"
       [backends.web1.servers.server1]
-        url = "http://{{ .Release.Name }}-storefront:8080"
+        url = "http://{{ .Release.Name }}-storefront"
 
   [frontends]
     [frontends.api]
