--- a/deploy/helm-chart/mushop/values-prod.yaml
+++ b/deploy/helm-chart/mushop/values-prod.yaml
@@ -1,16 +1,20 @@
-certManager:
-  enabled: true
-  email: "no-reply@ateam-oracle.com"
-
 ingress:
   enabled: true
 
   hosts:
     - mushop.ateam.cloud
     - insecure.mushop.ateam.cloud
+  
+  # Value can be either prod or staging
+  # This controls the cluster issuer what's used in Ingress
+  clusterIssuer: prod
+
+  # Used for ACME registration (if TLS is set)
+  email: "no-reply@ateam-oracle.com"
 
   tls:
-    - secretName: letsencrypt-prod
+    # Name of the secret where the cert will be stored for the host
+    - secretName: mushop-ateam-cloud
       hosts:
         - mushop.ateam.cloud
         - insecure.mushop.ateam.cloud
