--- a/deploy/helm-chart/mushop/values-test.yaml
+++ b/deploy/helm-chart/mushop/values-test.yaml
@@ -1,15 +1,19 @@
-certManager:
-  enabled: true
-  email: "no-reply@ateam-oracle.com"
-
 ingress:
   enabled: true
 
+  # Value can be either prod or staging
+  # This controls the cluster issuer what's used in Ingress
+  clusterIssuer: staging
   tls:
-    - secretName: letsencrypt-staging
+    # Name of the secret where the cert will be stored for the host
+    - secretName: test-mushop-ateam-cloud
       hosts:
         - test.mushop.ateam.cloud
 
+  # Used for ACME registration (if TLS is set)
+  email: "no-reply@ateam-oracle.com"
+
+  # If TLS is provided, cert-manager needs to be installed.
   hosts:
     - test.mushop.ateam.cloud
 
