--- a/deploy/helm-chart/mushop/templates/ingress.yaml
+++ b/deploy/helm-chart/mushop/templates/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
     {{- if .Values.ingress.tls }}
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
-    certmanager.k8s.io/cluster-issuer: {{ include "mushop.fullname" . }}
+    certmanager.k8s.io/cluster-issuer: {{ $.Release.Name}}-{{ .Values.ingress.clusterIssuer }}
     {{- end }}
     kubernetes.io/ingress.class: nginx
 spec:
