--- a/deploy/helm-chart/mushop/templates/issuer.yaml
+++ b/deploy/helm-chart/mushop/templates/issuer.yaml
@@ -1,14 +1,14 @@
-{{- if .Values.certManager.enabled }}
+{{- if .Values.ingress.clusterIssuer }}
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: ClusterIssuer
 metadata:
-  name: {{ include "mushop.fullname" . }}
+  name: {{ include "mushop.fullname" . }}-prod
 spec:
   acme:
     # The ACME production api URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: {{ .Values.certManager.email }}
+    email: {{ .Values.ingress.email }}
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-prod
@@ -18,13 +18,13 @@ spec:
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: ClusterIssuer
 metadata:
-  name: {{ include "mushop.fullname" . }}
+  name: {{ include "mushop.fullname" . }}-staging
 spec:
   acme:
     # The ACME production api URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: {{ .Values.certManager.email }}
+    email: {{ .Values.ingress.email }}
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-staging
