fix_Craziness_Carts_wallet_usage

--- a/src/carts/src/main/resources/application.properties
+++ b/src/carts/src/main/resources/application.properties
@@ -16,7 +16,7 @@ management.metrics.export.prometheus.enabled=true
 
 
 #spring.datasource.url=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
-spring.datasource.url=jdbc:oracle:thin:@${OADB_SERVICE}?TNS_ADMIN=./config
+spring.datasource.url=jdbc:oracle:thin:@${OADB_SERVICE}?TNS_ADMIN=${TNS_ADMIN}
 spring.datasource.username=${OADB_USER}
 spring.datasource.password=${OADB_PW}
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
