Standarizing the folder locations and naming conventions

--- a/src/carts/docker/docker-compose-zipkin.yml
+++ b/src/carts/docker/docker-compose-zipkin.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   carts:
-    image: aurademos/durhamdenim/carts
+    image: mushop/carts
     hostname: carts
     restart: always
     cap_drop:
